--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ X-Python3-Version: >= 3.4
 
 Package: python-rosdep-modules
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends}, ca-certificates, python-rospkg-modules (>= 1.1.10), python-yaml, python-catkin-pkg-modules (>= 0.4.0), python-rosdistro-modules (>= 0.7.5), sudo
+Depends: ${misc:Depends}, ${python:Depends}, ca-certificates, python-rospkg-modules (>> 1.1.9), python-yaml, python-catkin-pkg-modules (>= 0.4.0), python-rosdistro-modules (>= 0.7.5), sudo
 Conflicts: python-rosdep (<< 0.18.0), python-rosdep2
 Replaces: python-rosdep (<< 0.18.0)
 Description: rosdep package manager abstraction tool for ROS
